--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/themes/base/jquery-ui.css"
+    />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Taskmaster Pro</title>
   </head>
@@ -51,12 +55,7 @@
           <div class="col-12 col-md-6 col-xl-3 mb-3">
             <div class="card">
               <h4 class="card-header bg-dark text-light">To Do</h4>
-              <ul id="list-toDo" class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task to do</p>
-                </li>
-              </ul>
+              <ul id="list-toDo" class="list-group list-group-flush"></ul>
             </div>
           </div>
           <!-- to do end -->
@@ -65,12 +64,7 @@
           <div class="col-12 col-md-6 col-xl-3 mb-3">
             <div class="card">
               <h4 class="card-header bg-dark text-light">In Progress</h4>
-              <ul id="list-inProgress" class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/282020</span>
-                  <p class="m-1">Sample task in progress</p>
-                </li>
-              </ul>
+              <ul id="list-inProgress" class="list-group list-group-flush"></ul>
             </div>
           </div>
           <!-- in progress end -->
@@ -79,12 +73,7 @@
           <div class="col-12 col-md-6 col-xl-3 mb-3">
             <div class="card">
               <h4 class="card-header bg-dark text-light">In Review</h4>
-              <ul id="list-inReview" class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task in review</p>
-                </li>
-              </ul>
+              <ul id="list-inReview" class="list-group list-group-flush"></ul>
             </div>
           </div>
           <!-- in review end -->
@@ -93,12 +82,7 @@
           <div class="col-12 col-md-6 col-xl-3 mb-3">
             <div class="card">
               <h4 class="card-header bg-dark text-light">Done</h4>
-              <ul id="list-done" class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <span class="badge badge-primary badge-pill">05/28/2020</span>
-                  <p class="m-1">Sample task that's done</p>
-                </li>
-              </ul>
+              <ul id="list-done" class="list-group list-group-flush"></ul>
             </div>
           </div>
           <!-- done end -->
@@ -171,8 +155,11 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/umd/popper.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assets/js/script.js"></script>
   </body>
 </html>
